--- a/www/templates/donate.html
+++ b/www/templates/donate.html
@@ -1,6 +1,38 @@
-<ion-view title="Donar">
-    
-  <ion-content class="has-header">
-      <h1 class="title">¡Apoya el ministerio!</h1>
-  </ion-content>
-</ion-view>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>INVOLÚCRATE | Compañerismo Estudiantil</title>
+body {
+	
+}
+</head>
+
+<body>
+<h1 align="center">INVOLUCRATE</h1>
+                
+                       
+<h2  align="center">Apoya al movimiento</h2>
+</section>
+<section class="post-content"><strong >
+  <h2 align="center">-En oración</h2>
+  </strong><strong align="center"> </strong > Ayuda comprometiéndote con tu célula o Iglesia para orar regularmente por Compa.</p>
+  <p></p>
+<p><strong><h2 class="post-title" align="center">-Hacer un donativo 
+</h2></strong>
+<p><strong >¿HAS SIDO BENEFICIADO POR EL MINISTERIO DE</strong><strong> </strong><strong >COMPA</strong><strong>?</strong><br />
+Haz una donación o comprométete a donar regularmente y ayúdanos así a llegar a otra generación de estudiantes. ¡Gracias!</p>
+<p><strong>Haz tu donativo en BANAMEX</strong>, <strong>Cuenta</strong>: 0979-25145,<br />
+<strong>CLABE</strong>: 0025 8009 7900 2514 51<br />
+A nombre de <strong>Compa</strong><strong>ñerismo Estudiantil, A.C.</strong><br />
+Confirma tu donativo a: <a href="mailto:oficina@compa.mx">oficina@compa.mx</a></p>
+<p><strong>Para donar desde el extranjero: </strong><br />
+<a href="http://compa.us2.list-manage.com/track/click?u=6c27d36daca84a386ed29dc18&amp;id=f947f668e2&amp;e=45f864fe28" target="_blank">http://ifesworld.org/es/ofrendar</a><br />
+Selecciona: “ministerio estudiantil en una región o país especifico”→“México”.<br />
+Escríbenos si tienes dudas o para confirmar tu donativo.</p>
+<p>Nuestros logros hasta la fecha han sido posibles, por la gracia de Dios, a través de donaciones de personas como tú. Hacer una donación ahora, o comprometerte a ofrendar regularmente, nos permitirá continuar avanzando esta visión inspiradora.</p>
+</p>
+</section>
+
+</body>
+</html>
